--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -93,33 +93,61 @@
                                 <form class="form-horizontal mt-4 mb-5" action="/create_user_admin">
                                     {%  csrf_token %}
                                     <div class="form-group row">
-                                        <label for="Nom_Complet" class="control-label col-sm-2">Nom Complet</label>
+                                        <label for="Nom" class="control-label col-sm-2">Nom</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Nom_Complet" class="form-control" placeholder="Nom Complet" />
+                                            <input type="text" name="Nom" class="form-control" placeholder="Nom" required />
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="Prenom" class="control-label col-sm-2">Prénom</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" name="Prenom" class="form-control" placeholder="Prénom" />
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="Age" class="control-label col-sm-2">Age</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" name="Age" class="form-control" placeholder="Age" min="15" max="85" required />
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="Email" class="control-label col-sm-2">Email</label>
                                         <div class="col-sm-10">
-                                            <input type="email" name="Email" class="form-control" placeholder="johndoe@example.com" />
+                                            <input type="email" name="Email" class="form-control" placeholder="johndoe@example.com" required />
                                         </div>
                                     </div>
+
                                     <div class="form-group row">
-                                        <label for="Adresse" class="control-label col-sm-2">Adresse</label>
+                                        <label for="Departement" class="control-label col-sm-2">Département</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Adresse" class="form-control" placeholder="Adresse" />
+                                            <input type="text" name="Departement" class="form-control" placeholder="Département" required />
                                         </div>
                                     </div>
+                                    
                                     <div class="form-group row">
                                         <label for="Profession" class="control-label col-sm-2">Profession</label>
                                         <div class="col-sm-10">
-                                            <select name="Profession" class="custom-select">
-                                                <option value="Etudiant">Etudiant</option>
-                                                <option value="Professeur">Professeur</option>
-                                            </select>
+                                            <input type="text" name="Profession" class="form-control" placeholder="Profession" required />
                                         </div>
                                     </div>
+
+                                    <div class="form-group row">
+                                        <label for="Username" class="control-label col-sm-2">Nom d'utilisateur</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" name="Username" class="form-control" placeholder="Nom d'utilisateur" required />
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="Password" class="control-label col-sm-2">Mot de passe</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" name="Password" class="form-control" placeholder="Mot de passe" required />
+                                        </div>
+                                    </div>
+
                                     <div class="form-group row">
                                         <label for="Status" class="control-label col-sm-2">Status</label>
                                         <div class="col-sm-10">
@@ -129,12 +157,14 @@
                                             </select>
                                         </div>
                                     </div>
+
                                     <div class="form-group row">
                                         <div class="offset-sm-2 col-sm-9">
                                             <input type="submit" class="btn btn-success" value="Ajouter">
                                             <a class="btn btn-danger" href="/user_admin">Annuler</a>
                                         </div>
                                     </div>
+                                    
                                 </form>
                             </div>
                         </div>
