--- a/templates/add_news_post.html
+++ b/templates/add_news_post.html
@@ -93,17 +93,17 @@
                                 <div class="form-group row">
                                     <label for="Titre" class="control-label col-sm-2">Titre</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Titre" class="form-control" placeholder="Titre"/>
+                                        <input type="text" name="Titre" class="form-control" placeholder="Titre" required />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <label for="Contenu" class="control-label col-sm-2">Contenu</label>
                                     <div class="col-sm-10">
-                                        <textarea name="Contenu" class="form-control" placeholder="Contenu"></textarea>
+                                        <textarea name="Contenu" class="form-control" placeholder="Contenu" required ></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="Fichier" class="control-label col-sm-2">Fichier</label>
+                                    <label for="Fichier" class="control-label col-sm-2">Fichier Image</label>
                                     <div class="col-sm-10">
                                         <input type="file" name="Fichier" class="form-control"/>
                                     </div>
