--- a/templates/add_ressource_admin.html
+++ b/templates/add_ressource_admin.html
@@ -91,19 +91,19 @@
                                 <div class="form-group row">
                                     <label for="Titre_Ressource" class="control-label col-sm-2">Titre</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Titre_Ressource" class="form-control" placeholder="Titre du Ressource"/>
+                                        <input type="text" name="Titre_Ressource" class="form-control" placeholder="Titre du Ressource" required />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <label for="Description_Ressource" class="control-label col-sm-2">Description</label>
                                     <div class="col-sm-10">
-                                        <textarea name="Description_Ressource" class="form-control" placeholder="Description Ressource"></textarea>
+                                        <textarea name="Description_Ressource" class="form-control" placeholder="Description Ressource" required ></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="Fichier_Ressource" class="control-label col-sm-2">Fichier</label>
+                                    <label for="Fichier_Ressource" class="control-label col-sm-2">Fichier Image</label>
                                     <div class="col-sm-10">
-                                        <input type="file" name="Fichier_Ressource" class="form-control"/>
+                                        <input type="file" name="Fichier_Ressource" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="col-sm-10">
