--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -90,8 +90,17 @@
                         <div class="col-sm-12">
                             <!--Default elements-->
                             <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                                <form class="form-horizontal mt-4 mb-5" action="/create_user_admin">
+                                <form class="form-horizontal mt-4 mb-5" method="post" action="{% url 'create_user_admin' %}" enctype="multipart/form-data">
                                     {%  csrf_token %}
+
+                                    <div class="form-group row">
+                                        <label for="Image_Profil" class="control-label col-sm-2">Photo de Profil</label>
+                                        <div class="col-sm-8">
+                                            <input type="file" name="Image_Profil" accept="image/*" onchange="loadFile(event)" required >
+                                        </div>
+                                        <img id="output" src="{% static 'img/default-avatar.jpg' %}" class="rounded-circle" width="100" height="100" />
+                                    </div>
+
                                     <div class="form-group row">
                                         <label for="Nom" class="control-label col-sm-2">Nom</label>
                                         <div class="col-sm-10">
@@ -154,6 +163,7 @@
                                             <select name="Status" class="custom-select">
                                                 <option value="Utilisateur Simple">Utilisateur Simple</option>
                                                 <option value="Psychologue">Psychologue</option>
+                                                <option value="Administrateur">Administrateur</option>
                                             </select>
                                         </div>
                                     </div>
@@ -177,7 +187,15 @@
 
     {% block script %}
     <!--Page Wrapper-->
-
+    <script>
+        var loadFile = function(event) {
+            var output = document.getElementById('output');
+            output.src = URL.createObjectURL(event.target.files[0]);
+            output.onload = function() {
+              URL.revokeObjectURL(output.src) // free memory
+            }
+          };
+    </script>
     <!-- Page JavaScript Files-->
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
