--- a/templates/edit_manage_stress_admin.html
+++ b/templates/edit_manage_stress_admin.html
@@ -90,13 +90,13 @@
                                 <div class="form-group row">
                                     <label for="Titre_MS" class="control-label col-sm-2">Titre</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Titre_MS" class="form-control" value="{{ MS.Titre_MS }}"/>
+                                        <input type="text" name="Titre_MS" class="form-control" value="{{ MS.Titre_MS }}" required />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <label for="Description_MS" class="control-label col-sm-2">Description</label>
                                     <div class="col-sm-10">
-                                        <textarea name="Description_MS" class="form-control">{{ MS.Description_MS }}</textarea>
+                                        <textarea name="Description_MS" class="form-control" required >{{ MS.Description_MS }}</textarea>
                                     </div>
                                 </div>
                                 <div class="form-group row">
