--- a/templates/edit_news_post.html
+++ b/templates/edit_news_post.html
@@ -93,13 +93,13 @@
                                 <div class="form-group row">
                                     <label for="Titre" class="control-label col-sm-2">Titre</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Titre" class="form-control" value="{{ NP.Titre }}"/>
+                                        <input type="text" name="Titre" class="form-control" value="{{ NP.Titre }}" required />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <label for="Contenu" class="control-label col-sm-2">Contenu</label>
                                     <div class="col-sm-10">
-                                        <textarea name="Contenu" class="form-control">{{ NP.Contenu }}</textarea>
+                                        <textarea name="Contenu" class="form-control" required >{{ NP.Contenu }}</textarea>
                                     </div>
                                 </div>
                                 <div class="form-group row">
