--- a/templates/edit_user_admin.html
+++ b/templates/edit_user_admin.html
@@ -90,8 +90,17 @@
                         <div class="col-sm-12">
                             <!--Default elements-->
                             <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                                <form class="form-horizontal mt-4 mb-5" action="/update_user_admin/{{ Users_e.id }}">
+                                <form class="form-horizontal mt-4 mb-5" action="/update_user_admin/{{ Users_e.id }}" enctype="multipart/form-data">
                                     {%  csrf_token %}
+
+                                    <div class="form-group row">
+                                        <label for="Image_Profil" class="control-label col-sm-2">Photo de Profil</label>
+                                        <div class="col-sm-8">
+                                            <input type="file" name="Image_Profil" accept="image/*" onchange="loadFile(event)" required >
+                                        </div>
+                                        <img id="output" src="{% static 'img/default-avatar.jpg' %}" class="rounded-circle" width="100" height="100" />
+                                    </div>
+
                                     <div class="form-group row">
                                         <label for="Nom" class="control-label col-sm-2">Nom</label>
                                         <div class="col-sm-10">
@@ -153,10 +162,11 @@
                                         <div class="col-sm-10">
                                             <select name="Status" class="custom-select">
                                                 {% if Users_e.Status == "Utilisateur Simple" %}
-                                                    print("<option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
-                                                {% else %}
-                                                    print("<option value="Psychologue">Psychologue</option><option value="Utilisateur Simple">Utilisateur Simple</option>")
+                                                    print("<option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option><option value="Administrateur">Administrateur</option>")
+                                                {% elif Users_e.Status == "Psychologue" %}
+                                                    print("<option value="Psychologue">Psychologue</option><option value="Utilisateur Simple">Utilisateur Simple</option><option value="Administrateur">Administrateur</option>")
                                                 {% endif %}
+                                                    print("<option value="Administrateur">Administrateur</option><option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
                                             </select>
                                         </div>
                                     </div>
