--- a/templates/login.html
+++ b/templates/login.html
@@ -48,14 +48,14 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control mt-0" placeholder="Nom d'utilisateur" aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control mt-0" placeholder="Nom d'utilisateur" aria-label="Username" aria-describedby="basic-addon1" required >
                         </div>
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"><i class="fa fa-lock"></i></span>
                             </div>
-                            <input type="text" class="form-control mt-0" placeholder="Mot de passe" aria-label="Password" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control mt-0" placeholder="Mot de passe" aria-label="Password" aria-describedby="basic-addon1" required >
                         </div>
 
                         <div class="form-group">
