configuration du login et logout views

--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -70,7 +70,7 @@
                                     </a>
                                 </li>
                                 <li class="parent">
-                                    <a href="#" class=""><i class="fas fa-power-off mr-3"></i>
+                                    <a href="/logout" class=""><i class="fas fa-power-off mr-3"></i>
                                         <span class="none">Déconnexion</span>
                                     </a>
                                 </li>
