--- a/templates/edit_user_admin.html
+++ b/templates/edit_user_admin.html
@@ -97,16 +97,9 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="Nom" class="control-label col-sm-2">Nom</label>
+                                        <label for="Nom" class="control-label col-sm-2">Nom Complet</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Nom" class="form-control" value="{{ Users_e.Nom }}" />
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label for="Prenom" class="control-label col-sm-2">Prénom</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" name="Prenom" class="form-control" value="{{ Users_e.Prenom }}" />
+                                            <input type="text" name="Nom" class="form-control" value="{{ Users_e.Nom_Complet }}" />
                                         </div>
                                     </div>
 
