--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -31,7 +31,7 @@
                         <!--Image Avatar-->
                         <div class="avatar text-center">
                             <img src="{{ usr.Image_profil.url }}" alt="" class="rounded-circle" />
-                            <p><strong>{{ usr.Nom }} {{ usr.Prenom }}</strong></p>
+                            <p><strong>{{ usr.Nom_Complet }}</strong></p>
                             <span class="text-primary small"><strong>{{ usr.Status }}</strong></span>
                         </div>
                         <!--Image Avatar-->
@@ -97,16 +97,9 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="Nom" class="control-label col-sm-2">Nom</label>
+                                        <label for="Nom" class="control-label col-sm-2">Nom Complet</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Nom" class="form-control" placeholder="Nom" required />
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label for="Prenom" class="control-label col-sm-2">Prénom</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" name="Prenom" class="form-control" placeholder="Prénom" />
+                                            <input type="text" name="Nom" class="form-control" placeholder="Nom Complet" required />
                                         </div>
                                     </div>
 
