--- a/templates/journal_app.html
+++ b/templates/journal_app.html
@@ -32,7 +32,7 @@
                 <!--Image Avatar-->
                 <div class="avatar text-center">
                     <img src="{{ usr.Image_profil.url }}" alt="" class="rounded-circle" />
-                    <p><strong>{{ usr.Nom }} {{ usr.Prenom }}</strong></p>
+                    <p><strong>{{ usr.Nom_Complet }}</strong></p>
                     <span class="text-primary small"><strong>{{ usr.Status }}</strong></span>
                 </div>
                 <!--Image Avatar-->
@@ -98,7 +98,10 @@
                             <div class="tab-pane fade show active" id="custom-pub" role="tabpanel" aria-labelledby="nav-pub">
                                 {% for post in pst %}
                                 <div class="card">
+                                    {% if post.Fichier %}
                                     <img class="card-img-top" src="{{ post.Fichier.url }}">
+                                    {% else %}
+                                    {% endif %}
                                     <div class="card-body">
                                         <h5 class="card-title">{{ post.Titre }}</h5>
                                         <p class="card-text">{{ post.Contenu }}</p>
@@ -129,7 +132,10 @@
                             <div class="tab-pane fade" id="custom-new" role="tabpanel" aria-labelledby="nav-new">
                                 {% for new in nws %}
                                 <div class="card">
+                                    {% if new.Fichier %}
                                     <img class="card-img-top" src="{{ new.Fichier.url }}">
+                                    {% else %}
+                                    {% endif %}
                                     <div class="card-body">
                                         <h5 class="card-title">{{ new.Titre }}</h5>
                                         <p class="card-text">{{ new.Contenu }}</p>
