--- a/templates/manage_stress_app.html
+++ b/templates/manage_stress_app.html
@@ -32,7 +32,7 @@
                 <!--Image Avatar-->
                 <div class="avatar text-center">
                     <img src="{{ usr.Image_profil.url }}" alt="" class="rounded-circle" />
-                    <p><strong>{{ usr.Nom }} {{ usr.Prenom }}</strong></p>
+                    <p><strong>{{ usr.Nom_Complet }}</strong></p>
                     <span class="text-primary small"><strong>{{ usr.Status }}</strong></span>
                 </div>
                 <!--Image Avatar-->
@@ -89,7 +89,10 @@
                         {% for ms in MS %}
                         <div class="card-group">
                             <div class="card">
+                                {% if ms.Fichier_MS %}
                                 <img class="card-img-top" src="{{ ms.Fichier_MS.url }}" alt="Card image cap">
+                                {% else %}
+                                {% endif %}
                                 <div class="card-body">
                                     <h5 class="card-title">{{ ms.Titre_MS }}</h5>
                                     <p class="card-text">{{ ms.Description_MS }}</p>
