--- a/templates/pub.html
+++ b/templates/pub.html
@@ -32,7 +32,7 @@
                 <!--Image Avatar-->
                 <div class="avatar text-center">
                     <img src="{{ usr.Image_profil.url }}" alt="" class="rounded-circle" />
-                    <p><strong>{{ usr.Nom }} {{ usr.Prenom }}</strong></p>
+                    <p><strong>{{ usr.Nom_Complet }}</strong></p>
                     <span class="text-primary small"><strong>{{ usr.Status }}</strong></span>
                 </div>
                 <!--Image Avatar-->
@@ -96,7 +96,10 @@
                         <div class="tab-content py-3 px-3 px-sm-0" id="nav-customContent">
                             <div class="tab-pane fade show active" id="custom-pub" role="tabpanel" aria-labelledby="nav-pub">
                                 <div class="card">
+                                    {% if post.Fichier %}
                                     <img class="card-img-top" src="{{ post.Fichier.url }}">
+                                    {% else %}
+                                    {% endif %}
                                     <div class="card-body">
                                         <h5 class="card-title">{{ post.Titre }}</h5>
                                         <p class="card-text">{{ post.Contenu }}</p>
@@ -119,7 +122,7 @@
                                         </div>
                                         <div class="dropdown-divider"></div>
                                         <!-- Comment form-->
-                                        <form  class="form-horizontal" method="post" action="{% url 'create_comment' %}">
+                                        <form  class="form-horizontal" action=""> <!-- /create_comment/{{ post.id }} -->
                                             {%  csrf_token %}
                                             <div class="form-group row">
                                                 <div class="col-sm-12">
@@ -132,19 +135,24 @@
                                         <div class="dropdown-divider"></div>
 
                                         <div class="feed-single mt-3 mb-3">
-                                            <div class="media">
-                                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="{% static 'img/client-img4.png' %}" alt="Generic placeholder image">
-                                                <div class="media-body">
-                                                    <h6 class="mt-1 mb-2">Mario Mendez 
-                                                        <small class="text-muted  pl-2"><i class="fa fa-clock"></i>date de publication</small>
-                                                    </h6>
-                                                    <div class="card shadow-sm">
-                                                        <div class="card-body">
-                                                            <p class="card-text">commentaire</p>
+                                            {% for cmnt in cmt %}
+                                                {% if cmnt.Titre_pub == titre_pub %}
+                                                <div class="media">
+                                                    <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ cmnt.Image_profil.url }}" alt="Generic placeholder image">
+                                                    <div class="media-body">
+                                                        <h6 class="mt-1 mb-2">{{ cmnt.Auteur_Comment_pub }}
+                                                            <small class="text-muted  pl-2"><i class="fa fa-clock"></i>{{ cmnt.Date_Comment_pub }}</small>
+                                                        </h6>
+                                                        <div class="card shadow-sm">
+                                                            <div class="card-body">
+                                                                <p class="card-text">{{ cmnt.Comment_pub }}</p>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                                {% else %}
+                                                {% endif %}
+                                            {% endfor %}
                                         </div>
 
                                     </div>
